--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,11 +33,12 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/primary_light"
-        android:columnWidth="150sp"
-        android:gravity="left"
+        android:columnWidth="175sp"
+        android:gravity="center"
         android:numColumns="auto_fit"
         android:padding="0dp"
         android:scrollingCache="false"
+        android:horizontalSpacing="10dp"
         android:stretchMode="spacingWidthUniform"
         app:layout_constraintBottom_toTopOf="@+id/newCategoryButton"
         app:layout_constraintLeft_toLeftOf="parent"
