--- a/app/src/main/res/layout/category_list_grid_item.xml
+++ b/app/src/main/res/layout/category_list_grid_item.xml
@@ -9,12 +9,12 @@
     <TextView
         android:layout_width="150sp"
         android:textSize="30sp"
-        android:layout_height="60sp"
+        android:textAlignment="center"
+        android:layout_height="150sp"
         android:id="@+id/category_grid_item"
-        android:layout_weight="1"
-        android:gravity="center_horizontal"
-        android:text="Spare Me"
-
+        android:text="Spare Me, I Haven't Yet Been to Club Sapphire"
+        android:background="@color/primary_dark"
+        android:layout_marginTop="20dp"
         />
 
 </LinearLayout>
