--- a/app/src/main/res/layout/category_list_grid_item.xml
+++ b/app/src/main/res/layout/category_list_grid_item.xml
@@ -11,7 +11,7 @@
         android:textSize="25sp"
         android:textAlignment="center"
         android:layout_height="150sp"
-        android:id="@+id/category_grid_item"
+        android:id="@+id/categoryGridItem"
         android:text="Spare Me, I Haven't Yet Been to Club Sapphire"
         android:background="@color/primary_dark"
         android:layout_marginTop="20dp"
