--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,36 +24,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
-    <GridView
-        android:id="@+id/categoryGridView"
-        android:layout_width="0dp"
-        android:layout_height="377dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/primary_light"
-        android:columnWidth="175sp"
-        android:gravity="center"
-        android:numColumns="auto_fit"
-        android:padding="0dp"
-        android:scrollingCache="false"
-        android:horizontalSpacing="10dp"
-        android:stretchMode="spacingWidthUniform"
-        app:layout_constraintBottom_toTopOf="@+id/newCategoryButton"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:id="@+id/categoryRecyclerView"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
-
     <Button
         android:id="@+id/newCategoryButton"
         android:layout_width="0dp"
@@ -71,7 +41,19 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/categoryRecyclerView"
+        android:layout_width="328dp"
+        android:layout_height="284dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/newCategoryButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.528" />
 
 
 </android.support.constraint.ConstraintLayout>
