--- a/app/src/main/res/layout/category_list_grid_item.xml
+++ b/app/src/main/res/layout/category_list_grid_item.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_width="150sp"
+    android:layout_height="150sp">
 
 
     <TextView
-        android:layout_width="150sp"
-        android:textSize="25sp"
-        android:textAlignment="center"
-        android:layout_height="150sp"
         android:id="@+id/categoryGridItem"
-        android:text="Spare Me, I Haven't Yet Been to Club Sapphire"
-        android:background="@color/primary_dark"
+        android:layout_width="150sp"
+        android:layout_height="match_parent"
         android:layout_marginTop="20dp"
-        />
+        android:background="@color/accent"
+        android:text="Spare Me, I Haven't Yet Been to Club Sapphire"
+        android:textAlignment="center"
+        android:textSize="25sp" />
 
 </LinearLayout>
