clean up MainActivity and views associated with main activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     tools:context="com.todo.liszt.todoliszt.ui.MainActivity">
 
     <fragment
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/fragmentMainActivity"
         android:name="com.todo.liszt.todoliszt.ui.MainActivityFragment"
         tools:layout="@layout/fragment_main_activity"
