--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -45,6 +45,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/buttonSubmitCategory"
         android:text="Submit New Category"
+        android:background="@color/primary_dark"
+        android:textColor="@color/icons"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
