--- a/app/src/main/res/layout/category_list_grid_item.xml
+++ b/app/src/main/res/layout/category_list_grid_item.xml
@@ -13,6 +13,7 @@
         android:background="@color/accent"
         android:text="Spare Me, I Haven't Yet Been to Club Sapphire"
         android:textAlignment="center"
+        android:padding="20sp"
         android:textSize="25sp" />
 
 </LinearLayout>
