--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -9,20 +9,22 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="41dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="39dp"
         android:text="@string/app_name"
         android:textAllCaps="false"
-        android:textColor="@color/primary_text"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/primary_text"
+        android:textSize="36sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/newCategoryButton"
@@ -43,17 +45,18 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/categoryRecyclerView"
-        android:layout_width="328dp"
-        android:layout_height="284dp"
+        android:layout_width="313dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/newCategoryButton"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.528" />
+        app:layout_constraintVertical_bias="0.367" />
 
 
 </android.support.constraint.ConstraintLayout>
