--- a/app/src/main/res/layout/activity_category_detail.xml
+++ b/app/src/main/res/layout/activity_category_detail.xml
@@ -7,13 +7,19 @@
     tools:context="com.todo.liszt.todoliszt.ui.CategoryDetailActivity">
 
     <fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/fragmentMainActivity"
+        android:layout_width="372dp"
+        android:layout_height="498dp"
+        android:id="@+id/fragmentCategoryDetailActivity"
         android:name="com.todo.liszt.todoliszt.ui.CategoryDetailFragment"
         tools:layout="@layout/fragment_main_activity"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
 
 
 </android.support.constraint.ConstraintLayout>
